--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"grunt-contrib-connect": "^1.0.2",
 		"grunt-contrib-copy": "^1.0.0",
 		"grunt-contrib-less": "^1.4.0",
+		"grunt-contrib-nodeunit": "^1.0.0",
 		"grunt-contrib-uglify": "^3.0.1",
 		"grunt-contrib-watch": "^1.0.0",
 		"grunt-semver": "^0.1.7",
@@ -20,7 +21,7 @@
 		"load-grunt-tasks": "^3.5.2"
 	},
 	"scripts": {
-		"test": "echo \\\"Error: no test specified\\\" && exit 1"
+		"test": "grunt test"
 	},
 	"repository": {
 		"type": "git",
