--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,17 @@
+dist: trusty
+sudo: required
 language: node_js
+
+# install hugo
+install:
+  - wget -O /tmp/hugo.deb https://github.com/gohugoio/hugo/releases/download/v0.26/hugo_0.26_Linux-64bit.deb
+  - sudo dpkg -i /tmp/hugo.deb
+
+# install grunt
+before_script:
+  - npm install grunt-cli -g
+
+# test nodes vesions
 node_js:
   - "4.0"
   - "0.12"
-before_script:
-  - npm install grunt-cli -g
