--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 
 # install grunt
 before_script:
-  - npm install grunt-cli -g
+  - npm install grunt-cli
 
 # test nodes vesions
 node_js:
